2002-07-23  Hiroyuki Ito <hito@crl.go.jp>
	
	* [w3m-dev 03279] w3m-img for framebuffer update
	  http://homepage3.nifty.com/slokar/fb/w3mfb.patch.gz
	* w3mimg/fb/readme.txt: update
	* w3mimg/fb/fb.c: update
	* w3mimg/fb/fb.h: update
	* w3mimg/fb/fb_gdkpixbuf.c: update
	* w3mimg/fb/fb_img.c: update
	* w3mimg/fb/fb_img.h: update
	* w3mimg/fb/fb_imlib2.c: update
	* w3mimg/fb/fb_w3mimg.c: update
	* w3mimg/fb/fb_gdkpixbuf.h: deleted
	* w3mimg/fb/fb_imlib2.h: deleted
	* w3mimg/w3mimg.h (w3mimg_op): add get_image_size()
	* w3mimg/x11/x11_w3mimg.c: update
	* w3mimgdisplay.c (main): use get_image_size()
	* w3mimgsize.c (main): use get_image_size()

2002-07-19  Hideyuki SHIRAI <shirai@rdmg.mgcs.mei.co.jp>

	* [w3m-dev 03277] compile error on Solaris7
	* w3mimg/w3mimg.c: include <stdio.h> for NULL

2002-07-19  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03276] compile error on EWS4800
	* file.c (extract_auth_val): fix warnings
	* w3mimg/w3mimg.c: include <stdlib.h>

2002-07-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03275] fix of multipart.cgi
	* scripts/multipart/multipart.cgi.in: check REQUEST_METHOD first
					need $count for POST

2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mimgdisplay.c (main): '5' for w3mimgsize

2002-07-18  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03270] Re: w3m-img for framebuffer merged
	* w3mimg/x11/x11_w3mimg.c (w3mimg_x11open): unsigned int nchildren

2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XMakefile (w3mimg/w3mimg): added
		(w3img/fb) fixed
	* w3mimg/w3mimg.h (w3mimg_open): deleted to avoid compilation warnings
	* w3mimg/w3mimg.c: added
	* configure (imgobjs): add w3mimg/w3mimg.o 

2002-07-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03272] Re: w3m-img for framebuffer merged (Re:  Re: w3m-img for framebuffer)
	* XMakefile (w3mimg/x11): chdir
		(w3mimg/fb): chdir

2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>
